# Gaussian-method-of-linear-equations

./: CMakeLists.txt  GaussMethod.cpp  GaussMethod.h  MatrixAB.cpp  MatrixAB.h  PassingMethod.cpp  PassingMethod.h  SimpleIterationMethod.cpp  SimpleIterationMethod.h  main.cpp
